# textile-game-jam-2025

./: .gitignore  README.md
board/: code.py  gps_test.py
godot_btle/: Cargo.toml
godot_btle/src/: ble_connection.rs  lib.rs
textile_game_jam_2025_interface/: BBSesque.ttf.import  export_presets.cfg  font_theme.tres  icon.svg.import  project.godot
textile_game_jam_2025_interface/art/: amigup.png.import  background.png.import  bebble.png.import  creature_slot.png.import  dargon.png.import  duobeak.png.import  echogloom.png.import  filber.png.import  guronk.png.import  inicort.png.import  litone.png.import  pixil-layer-0.png.import  pixil-layer-1.png.import  pixil-layer-10.png.import  pixil-layer-11.png.import  pixil-layer-12.png.import  pixil-layer-3.png.import  pixil-layer-4.png.import  pixil-layer-5.png.import  pixil-layer-6.png.import  pixil-layer-7.png.import  pixil-layer-8.png.import  pixil-layer-9.png.import  pixil-layer-Hover (3).png.import  player-sprites-Sheet.png.import  player-sprites.png.import  swoot.png.import  woof.png.import
textile_game_jam_2025_interface/custom_resources/: font_theme.tres  richtext_bounce.gd  richtext_bounce.gd.uid
textile_game_jam_2025_interface/scenes/: Output.gd  Output.gd.uid  ble_test.tscn  creature.tscn  game.gd  game.gd.uid  game.tscn  player.gd  player.gd.uid  player.tscn  respawn_cooldown_bar.gd  respawn_cooldown_bar.gd.uid  start_menu.tscn  virtual_device.tscn
textile_game_jam_2025_interface/scripts/: ble_connection.gd  ble_connection.gd.uid  game.gd  start_menu.gd  start_menu.gd.uid  virtual_device.gd  (+1 more)
(+20 files in other folders)
